--- a/translate.html
+++ b/translate.html
@@ -1,258 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chat Viewer</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<style>
-:root {
-  --bg: #f0f4f8;
-  --card: #ffffff;
-  --primary: #3b82f6;
-  --text: #1e293b;
-  --bubble-me: #3b82f6;
-  --bubble-other: #e2e8f0;
-  --shadow: rgba(0,0,0,0.1);
-}
-* { box-sizing: border-box; margin: 0; padding: 0; }
-
-body {
-  font-family: "Poppins", sans-serif;
-  background: var(--bg);
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-header {
-  background: var(--primary);
-  color: white;
-  padding: 14px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-weight: 500;
-  box-shadow: 0 2px 10px var(--shadow);
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-
-header h1 {
-  font-size: 1.2rem;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-input[type="file"] { display: none; }
-
-.upload-label {
-  background: white;
-  color: var(--primary);
-  padding: 8px 16px;
-  border-radius: 8px;
-  font-weight: 500;
-  cursor: pointer;
-  transition: 0.2s;
-}
-.upload-label:hover {
-  background: rgba(255,255,255,0.9);
-  transform: scale(1.05);
-}
-
-#chatContainer {
-  flex: 1;
-  overflow-y: auto;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-#chatContainer.empty::before {
-  content: "Upload a chat.json file to visualize messages";
-  color: #64748b;
-  font-size: 0.95rem;
-  text-align: center;
-  margin-top: 50px;
-}
-
-.chat-partition {
-  width: 100%;
-  max-width: 600px;
-  background: var(--card);
-  border-radius: 16px;
-  box-shadow: 0 4px 20px var(--shadow);
-  padding: 16px;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  animation: fadeInUp 0.4s ease forwards;
-}
-
-.chat-header {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  border-bottom: 1px solid #e2e8f0;
-  padding-bottom: 8px;
-}
-
-.chat-header img {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 2px solid var(--primary);
-  transition: transform 0.3s;
-}
-.chat-header img:hover { transform: scale(1.1); }
-
-.chat-header h2 {
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: var(--text);
-}
-
-.messages {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.message {
-  display: inline-flex;
-  align-items: flex-end;
-  max-width: 70%;
-  padding: 10px 14px;
-  border-radius: 18px;
-  word-wrap: break-word;
-  position: relative;
-  animation: bubblePop 0.3s ease forwards;
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-
-.message:hover { transform: scale(1.03); box-shadow: 0 4px 15px var(--shadow); }
-
-.message.me {
-  align-self: flex-end;
-  background: var(--bubble-me);
-  color: white;
-  border-bottom-right-radius: 4px;
-}
-
-.message.other {
-  align-self: flex-start;
-  background: var(--bubble-other);
-  color: var(--text);
-  border-bottom-left-radius: 4px;
-}
-
-.message img {
-  max-width: 200px;
-  max-height: 200px;
-  border-radius: 12px;
-  object-fit: cover;
-  cursor: pointer;
-  transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.message img:hover {
-  transform: scale(1.1);
-  box-shadow: 0 6px 20px var(--shadow);
-}
-
-@keyframes fadeInUp {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-@keyframes bubblePop {
-  from { opacity: 0; transform: scale(0.9); }
-  to { opacity: 1; transform: scale(1); }
-}
-
-@media (max-width: 600px) {
-  header h1 { font-size: 1rem; }
-  .chat-partition { padding: 12px; }
-  .message img { max-width: 150px; max-height: 150px; }
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chat Viewer</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="chat-viewer.css">
 </head>
 <body>
 
-<header>
-  <h1><i class="fa-solid fa-comments"></i> Chat Viewer</h1>
-  <label for="fileInput" class="upload-label"><i class="fa-solid fa-upload"></i> Upload</label>
-  <input type="file" id="fileInput" accept=".json">
-</header>
+  <header>
+    <h1><i class="fa-solid fa-comments"></i> Chat Viewer</h1>
+    <label for="fileInput" class="upload-label"><i class="fa-solid fa-upload"></i> Upload</label>
+    <input type="file" id="fileInput" accept=".json">
+  </header>
 
-<div id="chatContainer" class="empty"></div>
+  <div id="chatContainer" class="empty"></div>
 
-<script>
-const fileInput = document.getElementById('fileInput');
-const chatContainer = document.getElementById('chatContainer');
-
-fileInput.addEventListener('change', e => {
-  const file = e.target.files[0];
-  if (!file) return;
-
-  const reader = new FileReader();
-  reader.onload = event => {
-    try {
-      const jsonData = JSON.parse(event.target.result);
-      renderChats(jsonData);
-    } catch {
-      alert("Invalid JSON format. Please upload a valid chat.json file.");
-    }
-  };
-  reader.readAsText(file);
-});
-
-function renderChats(data) {
-  chatContainer.classList.remove('empty');
-  chatContainer.innerHTML = '';
-
-  Object.keys(data).forEach((uid, index) => {
-    const userData = data[uid];
-    const profile = userData.profile;
-    const messages = userData.messages;
-
-    const partition = document.createElement('div');
-    partition.className = 'chat-partition';
-    partition.style.animationDelay = `${index * 0.05}s`;
-    partition.innerHTML = `
-      <div class="chat-header">
-        <img src="${profile.avatar}" alt="${profile.name}">
-        <h2>${profile.name}</h2>
-      </div>
-      <div class="messages"></div>
-    `;
-
-    const messagesDiv = partition.querySelector('.messages');
-    messages.forEach(msg => {
-      const msgDiv = document.createElement('div');
-      msgDiv.className = `message ${msg.me ? 'me' : 'other'}`;
-      if (msg.isImage) {
-        const img = document.createElement('img');
-        img.src = msg.text;
-        img.alt = "Image message";
-        msgDiv.appendChild(img);
-      } else {
-        msgDiv.textContent = msg.text;
-      }
-      messagesDiv.appendChild(msgDiv);
-    });
-
-    chatContainer.appendChild(partition);
-  });
-
-  setTimeout(() => {
-    chatContainer.scrollTo({ top: chatContainer.scrollHeight, behavior: 'smooth' });
-  }, 300);
-}
-</script>
-
+  <script src="chat-viewer.js"></script>
 </body>
 </html>
